First pass of the OS Support Library.
Largely panics, only functions expected to be needed have been coded.

--- a/acpi/SConscript
+++ b/acpi/SConscript
@@ -1,5 +1,7 @@
 # ACPI library. Incorporates necessary parts of ACPICA
 
 Import('env')
-obj = env.Library("acpi", [ "acpi.cpp", ])
+obj = env.Library("acpi", [ "acpi.cpp", 
+                            "acpi_osl.cpp", 
+                          ])
 Return ("obj") 
