--- a/klib/c_helpers/SConscript
+++ b/klib/c_helpers/SConscript
@@ -1,5 +1,7 @@
 # Klib C-environment helpers library.
 
 Import('env')
-obj = env.Library("klib-c-helpers", [ "buffers.cpp" ])
+obj = env.Library("klib-c-helpers", [ "buffers.cpp",
+                                      "printf_fns.cpp",
+                                    ])
 Return ("obj") 
