Initial ACPICA integration complete.

--- a/acpi/SConscript
+++ b/acpi/SConscript
@@ -3,5 +3,6 @@
 Import('env')
 obj = env.Library("acpi", [ "acpi.cpp", 
                             "acpi_osl.cpp", 
+                            "acpi_output.cpp",
                           ])
 Return ("obj") 
