--- a/processor/SConscript
+++ b/processor/SConscript
@@ -2,18 +2,21 @@
 
 Import('env')
 files = ["task_manager.cpp",
+         "timing/pit.asm",
+         "timing/timing.cpp",
+         "timing/hpet.cpp",
          "x64/control-x64.asm",
          "x64/gdt-x64.asm",
          "x64/interrupts-low-x64.asm",
          "x64/task_manager-low-x64.asm",
-         "x64/pic/pic-x64.asm",
          "x64/interrupts-x64.cpp",
          "x64/processor-x64.cpp",
          "x64/task_manager-x64.cpp",
          "x64/proc_exceptions-x64.cpp",
          "x64/cpuid-x64.asm",
-         "x64/timing/pit.asm", 
          "x64/pic/proc_interrupt_sys-x64.cpp",
-         "x64/pic/apic-x64.asm", ]
+         "x64/pic/pic-x64.asm",
+         "x64/pic/apic-x64.asm",
+        ]
 obj = env.Library("processor", files)
 Return ("obj") 
