Initial support for the x64 PAT.
As previously, all memory is allocated as the default type (write back).
Future work will allow the customer to change the desired cache
behaviour.

--- a/mem/SConscript
+++ b/mem/SConscript
@@ -6,6 +6,7 @@ files = ["misc.cpp",
          "x64/mem_x64.cpp",
          "x64/mem_x64_pml4.cpp",
          "x64/mem_support_x64.asm",
+         "x64/mem_pat_x64.cpp",
         ]
 
 Import('env')
