--- a/test/klib/synch/SConscript
+++ b/test/klib/synch/SConscript
@@ -3,7 +3,8 @@
 Import('env')
 files = [ "synch_test_list.cpp", 
           "synch_1.cpp",
-          "synch_2.cpp", ]
+          #"synch_2.cpp",
+        ]
 
 obj = env.Library("klib-synch-test", files)
 Return ("obj") 
