The simplest possible Object Manager

--- a/object_mgr/SConscript
+++ b/object_mgr/SConscript
@@ -1,6 +1,8 @@
 # Kernel Object Manager library.
 
 files = ["handles.cpp",
+         "object_mgr.cpp",
+         "object_type.cpp",
         ]
 
 Import('env')
