--- a/test/object_mgr/SConscript
+++ b/test/object_mgr/SConscript
@@ -2,6 +2,7 @@
 
 Import('env')
 obj = env.Library("object-mgr-test", [ "object_mgr_1.cpp", 
+                                       "object_mgr_2.cpp",
                                        "object_mgr_test_list.cpp",
                                      ])
 Return ("obj") 
