--- a/test/klib/data_structures/SConscript
+++ b/test/klib/data_structures/SConscript
@@ -4,5 +4,6 @@ Import('env')
 obj = env.Library("klib-data-structures-test", 
                   [ "ds_1.cpp", 
                     "ds_2.cpp",
+                    "ds_3.cpp",
                     "ds_test_list.cpp" ])
 Return ("obj") 
