--- a/klib/c_helpers/SConscript
+++ b/klib/c_helpers/SConscript
@@ -3,5 +3,6 @@
 Import('env')
 obj = env.Library("klib-c-helpers", [ "buffers.cpp",
                                       "printf_fns.cpp",
+                                      "string_fns.cpp",
                                     ])
 Return ("obj") 
