--- a/test/klib/misc/SConscript
+++ b/test/klib/misc/SConscript
@@ -3,5 +3,6 @@
 Import('env')
 obj = env.Library("klib-misc-test", 
                   [ "misc_1.cpp",
+                    "misc_2.cpp",
                     "misc_test_list.cpp" ])
 Return ("obj") 
