--- a/klib/data_structures/SConscript
+++ b/klib/data_structures/SConscript
@@ -1,5 +1,6 @@
 # Klib Data Structures library.
 
 Import('env')
-obj = env.Library("klib-data-structures", [ "lists.cpp" ])
+obj = env.Library("klib-data-structures", [ "lists.cpp",
+                                            "string.cpp", ])
 Return ("obj") 
