--- a/test/klib/data_structures/SConscript
+++ b/test/klib/data_structures/SConscript
@@ -5,5 +5,6 @@ obj = env.Library("klib-data-structures-test",
                   [ "ds_1.cpp", 
                     "ds_2.cpp",
                     "ds_3.cpp",
+                    "ds_4.cpp",
                     "ds_test_list.cpp" ])
 Return ("obj") 
