Fully enable ACPI support.
The system can now be shutdown by calling the ACPI code. Pushing the
power button is untested, but probably doesn't work yet (there's a
handler of some kind to install).

Fixes issues #16 (ACPICA can't install interrupt handlers) and #12 (ACPI
is told that all RAM is readable or writeable)

--- a/acpi/SConscript
+++ b/acpi/SConscript
@@ -1,8 +1,9 @@
 # ACPI library. Incorporates necessary parts of ACPICA
 
 Import('env')
-obj = env.Library("acpi", [ "acpi.cpp", 
-                            "acpi_osl.cpp", 
+obj = env.Library("acpi", [ "acpi.cpp",
+                            "acpi_interrupt.asm",
+                            "acpi_osl.cpp",
                             "acpi_output.cpp",
                           ])
 Return ("obj") 
