Introduce a very simple ELF file loader
This makes it a bit easier to build files to run in Azalea, however
there are some restrictions:
- Any faults in the headers simply crash the kernel. Given that this
code is intended to move shortly, that's fine for now.
- Only simple ELF files can be loaded. There's no support for
relocations or dynamic linking yet.

--- a/system_tree/process/SConscript
+++ b/system_tree/process/SConscript
@@ -2,6 +2,7 @@
 
 Import('env')
 files = [ "process_gen.cpp",
+          "process_elf.cpp",
         ]
 obj = env.Library("process", files)
 Return ("obj") 
