A couple of multithreading fixes
- Fix kmalloc/kfree so that they are thread-safe.
- Remove a circular dependency on kmalloc from the mutex code.
- Fix a race condition in task_get_cur_thread() by moving knowledge
about the current thread into the MSR IA32_KERNEL_GS_BASE, where it is
always up to date. Previously there was a race looking up the thread in
a list based on processor ID, where threads might move between
processors during that lookup.

--- a/klib/synch/SConscript
+++ b/klib/synch/SConscript
@@ -1,9 +1,7 @@
-# Klib Synchronisation library.
+# Klib Synchronisation library - advanced synchronization part.
 
 Import('env')
-obj = env.Library("klib-synch", 
-                  [ "kernel_locks.cpp",
-                    "kernel_mutexes.cpp",
-                    "kernel_semaphores.cpp",
-                    "asm_kernel_locks.asm", ])
+obj = env.Library("klib-synch-main", 
+                  [ "kernel_mutexes.cpp",
+                    "kernel_semaphores.cpp" ])
 Return ("obj") 
