Switch to using GRUB as the bootloader.
- Retire Pure64.
- Add code to switch to long mode on both BSP and AP.
- Update disk images
- Add a disk image creation script
- Minor changes to deal with removal of Pure64's boot info table
- Update documentation
- Acknowledge that we were previously distributing the binary of Pure64.

--- a/entry/SConscript
+++ b/entry/SConscript
@@ -1,5 +1,5 @@
-# Kernel entry point.
+# Kernel 64-bit entry point.
 
 Import('env')
-obj = env.Library("kernel-entry", [ "entry.cpp", "x64/entry-x64.asm" ])
+obj = env.Library("kernel-entry-64", [ "entry.cpp", "x64/entry-x64.asm", "x64/entry-x86.asm" ])
 Return ("obj") 
