Begin a keyboard driver and handle IRQs better
It's very difficult to handle IRQs entirely in the context of the
interrupt itself, since it makes locking very hard. As such, introduce a
"slow path" which is called after the main IRQ handler in the context of
a kernel thread.

Begin a keyboard driver that simply uses messages to send the scancodes
to whichever process it is told to.

This mechanism will hopefully be built on to enable Azalea's first
terminal.

--- a/devices/legacy/ps2/SConscript
+++ b/devices/legacy/ps2/SConscript
@@ -1,5 +1,7 @@
 # Generic PS/2 controller device driver.
 
 Import('env')
-obj = env.Library("dev-ps2", [ "ps2_controller.cpp" ])
-Return ("obj") 
+obj = env.Library("dev-ps2", [ "ps2_controller.cpp",
+                               "ps2_device.cpp",
+                             ])
+Return ("obj")
