Replace generic list with templated one
This should improve the safety of using lists by removing the need to
cast to and from void*. It also offers the opportunity to make a list of
structures without the need for pointers, and will hopefully make it
easier to understand what a given list is being used for.

--- a/klib/data_structures/SConscript
+++ b/klib/data_structures/SConscript
@@ -1,6 +1,6 @@
 # Klib Data Structures library.
 
 Import('env')
-obj = env.Library("klib-data-structures", [ "lists.cpp",
-                                            "string.cpp", ])
-Return ("obj") 
+obj = env.Library("klib-data-structures", [ "string.cpp",
+                                          ])
+Return ("obj")
