Handle key presses
Keyboard key pushes are now translated and sent to the demo program.
The demo program then dumps them on the screen. This continues the work
towards a working terminal.

--- a/devices/legacy/ps2/SConscript
+++ b/devices/legacy/ps2/SConscript
@@ -3,5 +3,6 @@
 Import('env')
 obj = env.Library("dev-ps2", [ "ps2_controller.cpp",
                                "ps2_device.cpp",
+                               "ps2_scancodes.cpp",
                              ])
 Return ("obj")
