Begin to control object lifespans better
Add a simple reference counting system to make it easier to keep track
of objects that have long lives - e.g. file objects.

--- a/kernel/object_mgr/SConscript
+++ b/kernel/object_mgr/SConscript
@@ -2,9 +2,9 @@
 
 files = ["handles.cpp",
          "object_mgr.cpp",
-         "object_type.cpp",
+         "ref_counter.cpp",
         ]
 
 Import('env')
 obj = env.Library("object_mgr", files)
-Return ("obj")  
+Return ("obj")
