--- a/kernel/klib/memory/SConscript
+++ b/kernel/klib/memory/SConscript
@@ -1,5 +1,10 @@
 # Klib Memory library.
 
 Import('env')
-obj = env.Library("klib-memory", [ "memory.cpp", "mem_operators.cpp" ])
-Return ("obj") 
+obj = env.Library("klib-memory",
+                  [
+                    "memory.cpp",
+                    "mem_operators.cpp",
+                    "mem_helpers.cpp",
+                  ])
+Return ("obj")
