Add a very simple shell program.
This seemingly simple change requires a bunch of infrastructure work:
- Processes no longer leak physical pages when exiting.
- A /dev/null analogue allows processes to not *require* the presence of
  a stdout/in/err pipe.
- Command line arguments and environment variable are passed to child
  processes.
- The basic terminal is moved out into the device tree (although not
  really improved otherwise)
- A simple user mode API library is introduced

Not all of this work is especially polished. In particular, the build
system is getting a bit unwieldy now.

--- a/kernel/devices/generic/SConscript
+++ b/kernel/devices/generic/SConscript
@@ -1,6 +1,10 @@
 # Generic drivers.
 
 Import('env')
-obj = env.Library("dev-generic", [ "gen_keyboard.cpp",
-                                 ])
+obj = env.Library("dev-generic",
+                  [
+                    "gen_keyboard.cpp",
+                    "gen_terminal.cpp",
+                  ]
+                 )
 Return ("obj")
