--- a/kernel/klib/misc/SConscript
+++ b/kernel/klib/misc/SConscript
@@ -1,6 +1,8 @@
 # Klib Miscellany library.
 
 Import('env')
-obj = env.Library("klib-misc", [ "math_hacks.cpp", 
-                                 "cpp_support.cpp", ])
-Return ("obj") 
+obj = env.Library("klib-misc", [
+                                "math_hacks.cpp",
+                                "cpp_support.cpp",
+                               ])
+Return ("obj")
