--- a/kernel/system_tree/fs/dev/SConscript
+++ b/kernel/system_tree/fs/dev/SConscript
@@ -3,6 +3,7 @@
 Import('env')
 files = [
           "dev_fs.cpp",
+          "null_dev.cpp",
         ]
 obj = env.Library("dev_fs", files)
 Return ("obj")
