Add basic USB device support using xHCI.
Demonstrate this support with HID keyboard and mouse support.

There are some major limitations:
- Not all transfer types are supported.
- Power management isn't supported.
- Nothing interesting happens if a device is removed.
- The tracking of device drivers in the system as a whole is pretty poor
- And OHCI, UHCI and EHCI are unsupported.

--- a/kernel/devices/generic/SConscript
+++ b/kernel/devices/generic/SConscript
@@ -5,6 +5,8 @@ obj = env.Library("dev-generic",
                   [
                     "gen_keyboard.cpp",
                     "gen_terminal.cpp",
+                    "gen_mouse.cpp",
+                    "keyboard_maps.cpp",
                   ]
                  )
 Return ("obj")
