Improve ATA disk support.
- Separates controller and disk drivers.
- Adds support for DMA transfers
- Adds write support.

Notes:
- Write support is untested, pending further improvements to the FAT
driver.
- ACPI on qemu seems to be very slow - you may prefer to patch qemu to
reduce the size of the PCI IRQ map.

--- a/kernel/acpi/SConscript
+++ b/kernel/acpi/SConscript
@@ -2,6 +2,7 @@
 
 Import('env')
 obj = env.Library("acpi", [ "acpi.cpp",
+                            "acpi_devices.cpp",
                             "acpi_osl.cpp",
                             "acpi_output.cpp",
                           ])
