Add very basic write support for FAT filesystems
This is quite bad at the moment - it doesn't include any locking, but I
want to check it in in order that we can move to the new build system.

--- a/kernel/klib/misc/SConscript
+++ b/kernel/klib/misc/SConscript
@@ -4,5 +4,6 @@ Import('env')
 obj = env.Library("klib-misc", [
                                 "math_hacks.cpp",
                                 "cpp_support.cpp",
+                                "err_code_names.cpp",
                                ])
 Return ("obj")
