Beef up the terminal system
- Organise a hierarchy of terminal-like devices
- Add support for terminals attached to the serial port
- Add support for backspace!

A demo of the serial terminal is included, but commented out.

This is a bit naff at the moment - it doesn't support most special keys,
my intention is to expand it over time.

--- a/kernel/devices/generic/SConscript
+++ b/kernel/devices/generic/SConscript
@@ -4,9 +4,11 @@ Import('env')
 obj = env.Library("dev-generic",
                   [
                     "gen_keyboard.cpp",
-                    "gen_terminal.cpp",
                     "gen_mouse.cpp",
+                    "gen_terminal.cpp",
+                    "gen_vt.cpp",
                     "keyboard_maps.cpp",
+                    "temp_terminal_process.cpp",
                   ]
                  )
 Return ("obj")
