--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/googletest"]
 	path = external/googletest
 	url = https://github.com/google/googletest.git
+[submodule "external/libtmt"]
+	path = external/libtmt
+	url = https://github.com/martin-hughes/libtmt
