Enable programs requiring ncurses
Programs requiring ncurses should now build and operate, in conjunction
with a suitable version of azalea_libc. There are likely several bugs.

Notable changes:
- Sync objects now support a maximum wait time
- The pipe between user mode processes and the terminal is removed.
- The VGA terminal now passes more key codes to user space.

--- a/kernel/devices/terminals/SConscript
+++ b/kernel/devices/terminals/SConscript
@@ -5,6 +5,7 @@ obj = env.Library("dev-terminals",
                   [
                     "serial_terminal.cpp",
                     "vga_terminal.cpp",
+                    "vga_terminal_key_seqs.cpp",
                   ]
                  )
 Return ("obj")
